// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Choices /> should render a series of checkboxes with selected values 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Test multiple choices
  </OrizzonteFilterCaption>
  <OrizzonteCheckBox
    disabled={false}
    id="checkbox-7"
    key="0"
    label="Test value 1"
    onChange={[Function]}
    selected={false}
    value={1}
    viewBox={null}
  />
  <OrizzonteCheckBox
    disabled={false}
    id="checkbox-8"
    key="1"
    label="Test value 2"
    onChange={[Function]}
    selected={true}
    value={2}
    viewBox={null}
  />
  <OrizzonteCheckBox
    disabled={false}
    id="checkbox-9"
    key="2"
    label="Test value 3"
    onChange={[Function]}
    selected={true}
    value={3}
    viewBox={null}
  />
</div>
`;

exports[`<Choices /> should render a series of checkboxes with some disabled ones 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Test multiple choices
  </OrizzonteFilterCaption>
  <OrizzonteCheckBox
    disabled={true}
    id="checkbox-1"
    key="0"
    label="Test value 1"
    onChange={[Function]}
    selected={false}
    value={1}
    viewBox={null}
  />
  <OrizzonteCheckBox
    disabled={false}
    id="checkbox-2"
    key="1"
    label="Test value 2"
    onChange={[Function]}
    selected={false}
    value={2}
    viewBox={null}
  />
  <OrizzonteCheckBox
    disabled={true}
    id="checkbox-3"
    key="2"
    label="Test value 3"
    onChange={[Function]}
    selected={false}
    value={3}
    viewBox={null}
  />
</div>
`;

exports[`<Choices /> should render a series of radios with no preference option 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Test multiple choices
  </OrizzonteFilterCaption>
  <OrizzonteRadioButton
    disabled={false}
    id="radio-16"
    label="No preference"
    name="myAPIField"
    onChange={[Function]}
    selected={false}
    value="no-preference"
    viewBox={null}
  />
  <OrizzonteRadioButton
    disabled={false}
    id="radio-17"
    key="0"
    label="Test value 1"
    name="myAPIField"
    onChange={[Function]}
    selected={false}
    value={1}
    viewBox={null}
  />
  <OrizzonteRadioButton
    disabled={false}
    id="radio-18"
    key="1"
    label="Test value 2"
    name="myAPIField"
    onChange={[Function]}
    selected={false}
    value={2}
    viewBox={null}
  />
  <OrizzonteRadioButton
    disabled={false}
    id="radio-19"
    key="2"
    label="Test value 3"
    name="myAPIField"
    onChange={[Function]}
    selected={true}
    value={3}
    viewBox={null}
  />
</div>
`;

exports[`<Choices /> should render a series of radios with selected value 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Test multiple choices
  </OrizzonteFilterCaption>
  <OrizzonteRadioButton
    disabled={true}
    id="radio-13"
    key="0"
    label="1"
    name="myAPIField"
    onChange={[Function]}
    selected={false}
    value="1"
    viewBox={null}
  />
  <OrizzonteRadioButton
    disabled={false}
    id="radio-14"
    key="1"
    label="2"
    name="myAPIField"
    onChange={[Function]}
    selected={false}
    value="2"
    viewBox={null}
  />
  <OrizzonteRadioButton
    disabled={true}
    id="radio-15"
    key="2"
    label="3"
    name="myAPIField"
    onChange={[Function]}
    selected={false}
    value="3"
    viewBox={null}
  />
</div>
`;

exports[`<Choices /> should render a series of radios with some disabled ones 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Test multiple choices
  </OrizzonteFilterCaption>
  <OrizzonteRadioButton
    disabled={true}
    id="radio-10"
    key="0"
    label="Test value 1"
    name="myAPIField"
    onChange={[Function]}
    selected={false}
    value={1}
    viewBox={null}
  />
  <OrizzonteRadioButton
    disabled={false}
    id="radio-11"
    key="1"
    label="Test value 2"
    name="myAPIField"
    onChange={[Function]}
    selected={false}
    value={2}
    viewBox={null}
  />
  <OrizzonteRadioButton
    disabled={true}
    id="radio-12"
    key="2"
    label="Test value 3"
    name="myAPIField"
    onChange={[Function]}
    selected={false}
    value={3}
    viewBox={null}
  />
</div>
`;
